--- a/pytorch_01/05-BuildNeuralNetwork.ipynb
+++ b/pytorch_01/05-BuildNeuralNetwork.ipynb
@@ -304,6 +304,276 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model Layers  模型层"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "让我们分解 FashionMNIST 模型中的层。为了说明这一点，我们将取一个包含 3 张大小为 28x28 的图像的示例小批量，看看当我们通过网络传递它时会发生什么。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(0): Linear(in_features=784, out_features=512, bias=True)\n",
+    "    (1): ReLU()\n",
+    "    (2): Linear(in_features=512, out_features=512, bias=True)\n",
+    "    (3): ReLU()\n",
+    "    (4): Linear(in_features=512, out_features=10, bias=True)\n",
+    "从这里可以看到，\n",
+    "784(28x28)---> 512 ----->512---->10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([3, 28, 28])\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_image = torch.rand(3,28,28)\n",
+    "print(input_image.size())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### nn.Flatten  nn.扁平 化"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([3, 784])\n"
+     ]
+    }
+   ],
+   "source": [
+    "flatten = nn.Flatten() # 默认值为1\n",
+    "flat_image = flatten(input_image)\n",
+    "print(flat_image.size())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2352])\n"
+     ]
+    }
+   ],
+   "source": [
+    "flatten = nn.Flatten(0)\n",
+    "flat_image = flatten(input_image)\n",
+    "print(flat_image.size())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### nn.Linear  nn.线性"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([3, 20])\n"
+     ]
+    }
+   ],
+   "source": [
+    "layer1 = nn.Linear(in_features=28*28, out_features=20)\n",
+    "hidden1 = layer1(flat_image)\n",
+    "print(hidden1.size())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### nn.ReLU\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Non-linear activations are what create the complex mappings between the model’s inputs and outputs. They are applied after linear transformations to introduce nonlinearity, helping neural networks learn a wide variety of phenomena.\n",
+    "\n",
+    "非线性激活是在模型的输入和输出之间创建复杂的映射。它们在线性变换后应用，以引入非线性 ，帮助神经网络学习各种现象。\n",
+    "\n",
+    "In this model, we use nn.ReLU between our linear layers, but there’s other activations to introduce non-linearity in your model.\n",
+    "\n",
+    "在这个模型中，我们使用 nn.ReLU 的 Alpha 触发器，但还有其他激活可以在模型中引入非线性。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before ReLU: tensor([[-0.0772,  0.4450, -0.1964, -0.1748,  0.1241, -0.1785, -0.0499, -0.5188,\n",
+      "         -0.7385, -0.4252, -0.4887, -0.2668,  0.0503, -0.1330,  0.2156, -0.2457,\n",
+      "          0.3538, -0.2508, -0.0464,  0.1807],\n",
+      "        [-0.1208, -0.0384, -0.1596,  0.1612,  0.5230,  0.1200, -0.0738, -0.4275,\n",
+      "         -0.4815, -0.4379, -0.7345,  0.1661, -0.1340, -0.2579,  0.4045, -0.4077,\n",
+      "          0.2405,  0.1065, -0.3617,  0.1372],\n",
+      "        [-0.1527, -0.1753, -0.0644, -0.4783,  0.0887, -0.0536, -0.0168, -0.0345,\n",
+      "         -0.5114, -0.2443, -0.6038,  0.0185,  0.2780, -0.3482,  0.5325, -0.1480,\n",
+      "          0.3587, -0.2044, -0.2157,  0.1315]], grad_fn=<AddmmBackward0>)\n",
+      "\n",
+      "\n",
+      "After ReLU: tensor([[0.0000, 0.4450, 0.0000, 0.0000, 0.1241, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+      "         0.0000, 0.0000, 0.0000, 0.0503, 0.0000, 0.2156, 0.0000, 0.3538, 0.0000,\n",
+      "         0.0000, 0.1807],\n",
+      "        [0.0000, 0.0000, 0.0000, 0.1612, 0.5230, 0.1200, 0.0000, 0.0000, 0.0000,\n",
+      "         0.0000, 0.0000, 0.1661, 0.0000, 0.0000, 0.4045, 0.0000, 0.2405, 0.1065,\n",
+      "         0.0000, 0.1372],\n",
+      "        [0.0000, 0.0000, 0.0000, 0.0000, 0.0887, 0.0000, 0.0000, 0.0000, 0.0000,\n",
+      "         0.0000, 0.0000, 0.0185, 0.2780, 0.0000, 0.5325, 0.0000, 0.3587, 0.0000,\n",
+      "         0.0000, 0.1315]], grad_fn=<ReluBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Before ReLU: {hidden1}\\n\\n\")\n",
+    "hidden1 = nn.ReLU()(hidden1)\n",
+    "print(f\"After ReLU: {hidden1}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### nn.Sequential  nn.顺序"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.1972, -0.1808, -0.3109, -0.0765, -0.0506, -0.0739, -0.0880,  0.1524,\n",
+       "          0.1210, -0.1520],\n",
+       "        [-0.1323, -0.1009, -0.1739,  0.0079,  0.0453, -0.0859, -0.2262,  0.0022,\n",
+       "         -0.0255, -0.1918],\n",
+       "        [-0.2621,  0.0340, -0.2054,  0.1305, -0.1471, -0.0893, -0.1760,  0.0400,\n",
+       "          0.0732, -0.2025]], grad_fn=<AddmmBackward0>)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seq_modules = nn.Sequential(\n",
+    "    flatten,\n",
+    "    layer1,\n",
+    "    nn.ReLU(),\n",
+    "    nn.Linear(20, 10)\n",
+    ")\n",
+    "input_image = torch.rand(3,28,28)\n",
+    "logits = seq_modules(input_image)\n",
+    "logits"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model structure: NeuralNetwork(\n",
+      "  (flatten): Flatten(start_dim=1, end_dim=-1)\n",
+      "  (linear_relu_stack): Sequential(\n",
+      "    (0): Linear(in_features=784, out_features=512, bias=True)\n",
+      "    (1): ReLU()\n",
+      "    (2): Linear(in_features=512, out_features=512, bias=True)\n",
+      "    (3): ReLU()\n",
+      "    (4): Linear(in_features=512, out_features=10, bias=True)\n",
+      "  )\n",
+      ")\n",
+      "\n",
+      "\n",
+      "Layer: linear_relu_stack.0.weight | Size: torch.Size([512, 784]) | Values : tensor([[ 0.0088, -0.0144,  0.0029,  ..., -0.0025, -0.0235,  0.0056],\n",
+      "        [-0.0182, -0.0199, -0.0036,  ..., -0.0148,  0.0171,  0.0303]],\n",
+      "       device='cuda:0', grad_fn=<SliceBackward0>) \n",
+      "\n",
+      "Layer: linear_relu_stack.0.bias | Size: torch.Size([512]) | Values : tensor([-0.0107, -0.0289], device='cuda:0', grad_fn=<SliceBackward0>) \n",
+      "\n",
+      "Layer: linear_relu_stack.2.weight | Size: torch.Size([512, 512]) | Values : tensor([[ 0.0050, -0.0214,  0.0145,  ..., -0.0189, -0.0392,  0.0222],\n",
+      "        [ 0.0191,  0.0116,  0.0370,  ..., -0.0273,  0.0430,  0.0432]],\n",
+      "       device='cuda:0', grad_fn=<SliceBackward0>) \n",
+      "\n",
+      "Layer: linear_relu_stack.2.bias | Size: torch.Size([512]) | Values : tensor([-0.0439,  0.0346], device='cuda:0', grad_fn=<SliceBackward0>) \n",
+      "\n",
+      "Layer: linear_relu_stack.4.weight | Size: torch.Size([10, 512]) | Values : tensor([[ 0.0163, -0.0398,  0.0094,  ..., -0.0100, -0.0401, -0.0015],\n",
+      "        [ 0.0287,  0.0346,  0.0401,  ..., -0.0012,  0.0003, -0.0299]],\n",
+      "       device='cuda:0', grad_fn=<SliceBackward0>) \n",
+      "\n",
+      "Layer: linear_relu_stack.4.bias | Size: torch.Size([10]) | Values : tensor([-0.0397, -0.0104], device='cuda:0', grad_fn=<SliceBackward0>) \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Model structure: {model}\\n\\n\")\n",
+    "\n",
+    "for name, param in model.named_parameters():\n",
+    "    print(f\"Layer: {name} | Size: {param.size()} | Values : {param[:2]} \\n\")"
+   ]
   }
  ],
  "metadata": {
