--- a/Deep-Learning-with-PyTorch/py_torch_01.ipynb
+++ b/Deep-Learning-with-PyTorch/py_torch_01.ipynb
@@ -1378,6 +1378,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## softmax\n",
     "- 模型输出概率，有些是负数，用softmax处理一下\n",
     "- 下面两种写法一回事"
    ]
@@ -2776,6 +2777,13 @@
     "with open('../data/p1ch2/imagenet_classes.txt') as f:\n",
     "    labels = [line.strip() for line in f.readlines()]\n",
     "labels"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## max"
    ]
   },
   {
